Serif body font to sans-serif body font

--- a/css/modern.css
+++ b/css/modern.css
@@ -39,7 +39,7 @@ strong {
   width: 900px;
   text-align: left;
   font-size: 1.2em;
-  font-family: Garmond, Georgia, serif;
+  font-family: Helvetica, Arial, Sans-Serif;
   background-color: white;
 }
 
