--- a/css/modern.css
+++ b/css/modern.css
@@ -57,8 +57,8 @@ strong {
 }
 
 #header, #footer {
-  background-color: rgb(0, 114, 114);
-  color: white;
+  background-color: rgb(179, 188, 202);
+  color: rgb(1, 34, 28);
   padding: 15px;
 }
 
