--- a/css/mobile.css
+++ b/css/mobile.css
@@ -7,3 +7,8 @@
   font-family: Helvetica, Arial, Sans-Serif;
   background-color: white;
 }
+
+#container {
+  padding-left: 5px;
+  padding-right: 5px;
+}
