Trying to fix IE not doing left/right padding properly. I think it's due to specifiying in em...

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -11,7 +11,7 @@
 #content { 
   padding-top: 15px;
   padding-bottom: 25px;
-  padding-right: 5em;
-  padding-left: 5em;
+  padding-right: 60px;
+  padding-left: 60px;
   clear: both;
 }
