--- a/css/desktop.css
+++ b/css/desktop.css
@@ -11,7 +11,7 @@
 #content { 
   padding-top: 15px;
   padding-bottom: 25px;
-  padding-right: 60px;
-  padding-left: 60px;
+  margin-right: 60px;
+  margin-left: 60px;
   clear: both;
 }
