--- a/css/modern.css
+++ b/css/modern.css
@@ -122,7 +122,13 @@ h3,h4 {
 #menu li {
   display: block;
   float: left;
-  padding-left: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-right: 1px solid white;
+}
+
+#menu li.last {
+  border-right: none;
 }
 
 a { color: #004B6B; text-decoration: none; border-bottom: 1px dotted #004B6B; }
